--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ name = "create-pack"
 path = "src/bin/create-pack/main.rs"
 
 [dependencies]
-zstd = "0.9.0"
+zstd = { version = "0.9.0", features = ["zstdmt"] }
 tar = "0.4.35"
 walkdir = "2.3.2"
 clap = "2.33.0"
@@ -20,3 +20,6 @@ rust-crypto = "0.2.36"
 rayon = "1.5.1"
 thread_local = "1.1.3"
 hex = "0.4.3"
+serde = { version = "1.0.126", features = ["derive", "rc"] }
+rmp-serde = "0.15.5"
+num_cpus = "1.13.0"
