Add elfshaker extract and elfshaker update-index
This commit adds a new elfshaker executable, with two subcommands.

The elfshaker extract subcommand can be used to extract a snapshot from
a pack file.

The elfshaker update-index subcommand, can be used to rebuild the repository index
stored under elfshaker_data/index.

The elfshaker executable uses a special directory structure, similar to
how git uses .git/, only elfshaker uses elfshaker_data/. This directory
contains several files and subdirectories:
- A plain text file called HEAD which stores an identifier for the
last extracted snapshot.
- The repository index, which can be (re)build with update-index.
- A packs/ subdirectory, which contains .pack and .pack.idx files.

Signed-off-by: Peter Waller <peter.waller@arm.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ edition = "2018"
 name = "create-pack"
 path = "src/bin/create-pack/main.rs"
 
+[[bin]]
+name = "elfshaker"
+path = "src/bin/elfshaker/main.rs"
+
 [dependencies]
 zstd = { version = "0.9.0", features = ["zstdmt"] }
 tar = "0.4.35"
@@ -23,3 +27,5 @@ hex = "0.4.3"
 serde = { version = "1.0.126", features = ["derive", "rc"] }
 rmp-serde = "0.15.5"
 num_cpus = "1.13.0"
+log = "0.4.0"
+lazy_static = "1.4.0"
