--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,11 +17,11 @@ path = "src/bin/elfshaker/main.rs"
 
 [dependencies]
 zstd = { version = "0.9.0", features = ["zstdmt"] }
+crossbeam-utils = "0.8"
 tar = "0.4.35"
 walkdir = "2.3.2"
 clap = "2.33.0"
 rust-crypto = "0.2.36"
-thread_local = "1.1.3"
 hex = "0.4.3"
 serde = { version = "1.0.126", features = ["derive", "rc"] }
 rmp-serde = "0.15.5"
