Test create-test-pack in CI
Do another end-to-end test that we can create a test pack and run it
through our test harness, as a further robustness check.

Signed-off-by: Peter Waller <peter.waller@arm.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,3 +22,5 @@ jobs:
       run: cargo test --verbose
     - name: Run check
       run: ./test-scripts/check.sh ./target/release/elfshaker ./test-scripts/artifacts/verification.pack
+    - name: Generate random pack
+      run: ./test-scripts/check.sh ./target/release/elfshaker $(contrib/create-test-pack 5 64)
