Improve create-test-pack
* Avoid spawning shell to calculate random number (2x speed improvement)
* Pass path to binary
* Move usage down into main() (I missed it before)
* Add (currently commented out) text for testing once #20 is fixed.

Signed-off-by: Peter Waller <peter.waller@arm.com>

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Run check
       run: ./test-scripts/check.sh ./target/release/elfshaker ./test-scripts/artifacts/verification.pack
     - name: Generate random pack
-      run: ./test-scripts/check.sh ./target/release/elfshaker $(contrib/create-test-pack 5 64)
+      run: ./test-scripts/check.sh ./target/release/elfshaker $(contrib/create-test-pack ./target/release/elfshaker 5 64)
