--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ walkdir = "2.3.2"
 clap = "2.33.0"
 rust-crypto = "0.2.36"
 hex = "0.4.3"
+url = "2.2.2"
+ureq = "2.4.0"
 serde = { version = "1.0.126", features = ["derive", "rc"] }
 rmp-serde = "0.15.5"
 num_cpus = "1.13.0"
