Use hashbrown::HashMap for the ChangeSet
Consistent runtime improvement when running elfshaker gc from
26s -> 18s (on my machine and test repository based on manyclangs) due
to the overhead of applying `ChangeSet<FileHandle>` for ~60k snapshots.

The hashbrown implementation is a collections::HashMap replacement with
SIMD lookup and quadrating probing. It uses a weaker but faster hash
function and is both lower in memory usage and much faster than the
collections::HashMap.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ crossbeam-utils = "0.8"
 walkdir = "2.3.2"
 clap = "2.33.0"
 rust-crypto = "0.2.36"
+hashbrown = "0.12.3"
 hex = "0.4.3"
 chrono = "0.4.19"
 url = "2.2.2"
