--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -7,6 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: cargo fmt --all -- --check
       - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
         with:
