--- a/.github/workflows/test-nix.yml
+++ b/.github/workflows/test-nix.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: docker/setup-qemu-action@v2
       - name: Build
-        run: nix build .#release
+        run: nix build --log-lines 1000 .#release
       - name: ls
         run: ls -la result/
 
@@ -26,6 +26,6 @@ jobs:
       - uses: DeterminateSystems/nix-installer-action@main
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - name: Build
-        run: nix build .#release
+        run: nix build --log-lines 1000 .#release
       - name: ls
         run: ls -la result/
