--- a/.github/workflows/test-nix.yml
+++ b/.github/workflows/test-nix.yml
@@ -29,3 +29,14 @@ jobs:
         run: nix build --log-lines 1000 .#release
       - name: ls
         run: ls -la result/
+
+  build-macos-arm64:
+    runs-on: macos-13-arm64
+    steps:
+      - uses: actions/checkout@v3
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Build
+        run: nix build --log-lines 1000 .#release
+      - name: ls
+        run: ls -la result/
