Add macos-14 (aarch64) darwin builder
Should give aarch64 darwin binaries.

Github's builder naming is confusing. They had -arm64 suffices, but now
they don't, so it's unclear how to use their labels to specify which
architecture you want to target. For now we'll assume macos-13 = x86 and
macos-14 = aarch64 and in the future we should be able to do cross
compilation to x86 from aarch64 if it works easily enough (dependent on
nixpkgs).

--- a/.github/workflows/test-nix.yml
+++ b/.github/workflows/test-nix.yml
@@ -20,7 +20,18 @@ jobs:
         run: ls -la result/
 
   build-macos-x86_64:
-    runs-on: macos-13
+    runs-on: macos-13 # 13 runner is x86.
+    steps:
+      - uses: actions/checkout@v3
+      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: DeterminateSystems/magic-nix-cache-action@main
+      - name: Build
+        run: nix build --log-lines 1000 .#release
+      - name: ls
+        run: ls -la result/
+
+  build-macos-arm64:
+    runs-on: macos-14 # 14 runner is aarch64.
     steps:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@main
