Fix typo in GitHub Actions workflow

--- a/.github/workflows/test-nix.yml
+++ b/.github/workflows/test-nix.yml
@@ -2,7 +2,7 @@ name: Testing Nix
 
 on:
   push:
-    branches: [ main test-ci ]
+    branches: [ main, test-ci ]
   pull_request:
     branches: [ main ]
 
